@@ -34,3 +34,7 @@ Wed Nov 10 20:39:04 2010                        Michael Jennings (mej)
 
 A couple more template methods.
 ----------------------------------------------------------------------
+Thu Nov 11 00:11:52 2010                        Michael Jennings (mej)
+
+Object documentation improvements and reformatting.
+----------------------------------------------------------------------
